--- a/README
+++ b/README
@@ -17,20 +17,10 @@ A simple, full-stack task management application that allows users to create, re
 - **Version Control**: Git, GitHub
 
 ## 📁 Project Structure
-
+> *(Add your folder structure here later if you like)*
 
 ## 🔧 How to Run
 1. Clone the repository:
    ```bash
    git clone https://github.com/your-username/Task-Management-App.git
    cd Task-Management-App
-
-pip install -r requirements.txt
-
-python app.py
-
-http://127.0.0.1:5000/
-
-## 📬 Contact  
-Feel free to reach out at [sunildabbi03@gmail.com](mailto:sunildabbi03@gmail.com)
-
